<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chiamaka.tic_tac_toe.MainActivity"
    android:background="@color/colorPrimaryDark">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:orientation="vertical"
    android:id="@+id/layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:src="@drawable/name"
            android:layout_margin="30dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/framee"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/mind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/intro"
        android:textColor="@color/white"
        android:textAppearance="@style/think_you_a"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/think_you_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/think_you_a"
        android:textColor="@color/white"
        android:textAppearance="@style/think_you_a"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/lets_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/lets_play"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/lets_play"
        android:textSize="18sp"
        />
</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="20dp"
        >

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/downloading"
        android:text="@string/play"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/ButtonstartPlaying"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>